--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,8 @@
     <div class="top-line bg-primary"></div>
     <a class="navbar-brand"><img src="content/img/science-logo.png" height="50px"/></a>
     <div class="nav navbar-nav">
-      <a class="nav-item active nav-link" href="/">Home</a>
+      <a class="nav-item active nav-link" routerLink="home" routerLinkActive="true">Home</a>
+      <a class="nav-item nav-link" routerLink="ultra-feature">Ultra Feature</a>
     </div>
   </nav>
 </div>
