--- a/src/app/mission/mission.component.html
+++ b/src/app/mission/mission.component.html
@@ -19,6 +19,13 @@
             points will make us leaders in the unparalleled ballpark figure industry. Going forward, our competitive
             milestone will deliver value to bandwidths.
           </p>
+          <p>
+            {{dynamicText}}
+          </p>
+          <p>
+            {{observableText | async}}
+
+          </p>
         </div>
       </div>
     </div>
